--- a/src/blog/how-to-configure-spruce-css-in-your-project.mdx
+++ b/src/blog/how-to-configure-spruce-css-in-your-project.mdx
@@ -43,23 +43,24 @@ Inside the** _config.scss** file, we set our Spruce CSS customizations as you se
 ```scss
 @use 'sprucecss/scss/spruce' with (
   $colors: (
-    card: (
-      background: hsl(0, 0%, 100%),
-      border: hsl(220 32% 87%)
-    )
-  )
+    'card': (
+      'background': hsl(0deg 0% 100%),
+      'border': hsl(220deg 32% 87%),
+    ),
+  ),
 );
 ```
 
 ## _styles.scss
 
-Inside the **_styles.scss** file, we set the [generators](/docs/elements/generators). Usually, this means the `generate-content` and `generate-form`, but we can do it any way we want.
+Inside the **_styles.scss** file, we set the [generators](/docs/elements/generators). Usually, this means the `generate-styles`, but we can do it any way we want using the separate functions.
+
+If you want to configurate the generated content you can do it through the <code><a href="/docs/sass/variables/#generators">$generators</a></code> map where you can opt-out from each section separatly.
 
 ```scss
-@use 'sprucecss/scss/spruce';
+@use 'sprucecss/scss/spruce' as *;
 
-@include spruce.generate-content;
-@include spruce.generate-form;
+@include generate-styles;
 ```
 
 ## main.scss
@@ -73,5 +74,5 @@ For the complete picture, we include the main file here, where the first step is
 
 ## The Advantages of This Structure
 - You separated every config-related code inside one folder, which is always nice.
-- For example, you can easily extend this structure in the future if you need another theme, like a dark one.
+- You can easily extend this structure in the future if you need another theme, like a dark one.
 - You can load the config in multiple files, which are usually handy (or just the **_config.scss**).
