--- a/src/blog/how-to-reduce-spruce-css-size.mdx
+++ b/src/blog/how-to-reduce-spruce-css-size.mdx
@@ -11,26 +11,28 @@ tags: ['how-to']
 
 This framework only writes out any code if we tell it explicitly through a mixin. We call these mixins generators. We can control the size of our codebase by using or omitting them.
 
-Usually, we use the following two:
+Usually, we use `generate-styles`:
 
 ```scss
-@use 'sprucecss/scss/spruce';
+@use 'sprucecss/scss/spruce' as *;
 
-@include spruce.generate-content;
-@include spruce.generate-form;
+@include generate-styles;
 ```
 
-You can see that from the [source code](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_generator.scss) that these two mixins generate a lot smaller ones which we can utilize.
+and we configure what to generate through the `$generators` map.
 
-If you only need one type of button and nothing more from the forms, you can use the following:
+You can see that from the [source code](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_generator.scss) that these mixin contains a lot of condition based on the [previously mentioned map](http://localhost:8000/docs/sass/variables/#generators).
 
 ```scss
-@use 'sprucecss/scss/spruce';
-
-@include spruce.generate-content;
-@include spruce.generate-btn('.btn');
-
-.btn--primary { @include spruce.btn-variant(primary); }
+@use 'sprucecss/scss/spruce' with (
+  $generators: (
+    'form': (
+      'btn': false,
+    ),
+  ),
+);
 ```
+
+Using this setting we turn off the button style generation.
 
 <Notification type="info">Please visit our <a href="/blog/how-to-configure-spruce-css-in-your-project">first how-to article</a> to learn more about how you should set up your config files.</Notification>
