Update meta descriptions

--- a/src/docs/customization/themes.mdx
+++ b/src/docs/customization/themes.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Themes'
+description: 'Create dark - or any additional - theme easily with Spruce CSS and custom CSS properties.'
 order: 13
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/customization/themes.mdx'
 ---
