--- a/src/docs/elements/forms.mdx
+++ b/src/docs/elements/forms.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Forms'
+description: 'Spruce CSS comes with overall form support for styling the different native elements.'
 order: 22
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/forms.mdx'
 ---
