--- a/src/docs/elements/media.mdx
+++ b/src/docs/elements/media.mdx
@@ -4,7 +4,7 @@ order: 23
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/media.mdx'
 ---
 
-<p className="lead">Under media, you can find some of the media-related styles and utilities.</p>
+<p className="lead">Under media, you can find some of the media-related styles.</p>
 
 ## Images
 
