--- a/src/docs/elements/typography.mdx
+++ b/src/docs/elements/typography.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Typography'
+description: 'Spruce CSS comes with fluid typography; it scales automatically depending on the viewport.'
 order: 19
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/typography.mdx'
 ---
