--- a/src/docs/sass/colors.mdx
+++ b/src/docs/sass/colors.mdx
@@ -1,10 +1,11 @@
 ---
 title: 'Colors'
+description: 'Through colors, you can genuinely make Spruce CSS your own. Control everything with the $colors map.'
 order: 14
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/sass/variables.mdx'
 ---
 
-<p className="lead">Spruce CSS comes with a bunch of Sass variables. It also uses CSS custom properties for colors and transitions.</p>
+<p className="lead">Spruce CSS comes with a bunch of Sass variables and generates CSS custom properties.</p>
 
 ## List of Colors
 
