--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Functions'
+description: 'The functions are an essential part of the Spruce CSS framework. You can get values, set up your fluid typography, and more.'
 order: 17
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/sass/functions.mdx'
 ---
