--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Mixins'
+description: 'You can do more with less code with the mixins in Spruce CSS micro-framework.'
 order: 16
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/sass/mixins.mdx'
 ---
