--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Variables'
+description: 'The variables are fundamental for better customisability. Luckily Spruce CSS gives you a lot of them.'
 order: 15
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/sass/variables.mdx'
 ---
