--- a/src/docs/customization/variables.mdx
+++ b/src/docs/customization/variables.mdx
@@ -18,9 +18,9 @@ To see the complete list of the getter functions, please visit the [functions pa
 
 .component {
   border-radius: config('border-radius-lg', $display);
-  color: color(secondary);
-  font-size: font-size(h2);
-  padding-block: spacer(m);
+  color: color('secondary');
+  font-size: font-size('h2');
+  padding-block: spacer('m');
 }
 ```
 
